<resources>
    <string name="app_name">ManageSalary</string>
    <string name="test1">Manage Salary</string>
    <string name="button1">Add Employee</string>
    <string name="button2">Add Product</string>
    <string name="button3">Calculate Salary</string>
    <string name="text2">Product Registration</string>
    <string name="text3">Product Name</string>
    <string name="text4">Product Price</string>
    <string name="text5">Product Register</string>
    <string name="text6">Employee Registration</string>
    <string name="text7">Employee Name</string>
    <string name="text8">Employee Register</string>
    <string name="text9">Product Parts</string>
    <string name="text10">Enter Product Part</string>
    <string name="text11">Price for part</string>
    <string name="text12">Select a product</string>
    <string name="button4">Add Part</string>
    <string name="text13">Calculate Salary</string>
    <string name="text14">Completed Quantity</string>
    <string name="button5">Calculate</string>

</resources>